@@ -9,6 +9,7 @@ dir_config('gnurx')
 have_library('gnurx')
 
 if have_library('magic', 'magic_open') && have_header('magic.h')
+  have_func('magic_version')
   have_header('file/patchlevel.h')
   create_makefile('filemagic/ruby_filemagic')
 else
